# STOCK_VERIFY_ui

./: .coverage  .cursorrules  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .trufflehog-exclude.txt  ADDITIONAL_IMPROVEMENTS.md  ANALYSIS_LOG.md  AUTOMATION_SUMMARY.md  BARCODE_SEARCH_IMPROVEMENTS.md  BARCODE_SEARCH_VERIFICATION_REPORT.md  BENCHMARK_REPORT.md  CI_CD_EXECUTIVE_SUMMARY.md  CI_CD_ISSUES_ANALYSIS.md  CI_CD_QUICK_FIX_GUIDE.md  CI_CD_README.md  CI_CD_VISUAL_OVERVIEW.md  CI_VERIFICATION_REPORT.md  CLAUDE.md  CODEBASE_ANALYSIS.md  CODEBASE_AUDIT_REPORT.md  CODEBASE_ISSUES_REPORT.md  COLLECTION_CLEANUP_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  CONTRIBUTING.md  DEVELOPER_REPORT.md  DO_ALL_FINAL_SUMMARY.md  Dockerfile  ENHANCEMENT_IMPLEMENTATION_PROGRESS.md  EXPO_WEB_BLANK_PAGE_DEBUG.md  FEATURE_IMPLEMENTATION.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_TEST_RESULTS.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  FUNCTIONAL_DETAILED_REPORT.md  GITHUB_CI_CD_STATUS.md  IMPLEMENTATION_COMPLETE.md  (+58 more)
backend/: .coverage  .env.docker.example  .env.example  Dockerfile  SECURITY_SCAN_RESULTS.md  api_mapping.py  backup.Dockerfile  bandit_report.json  config.py  coverage.json  coverage.xml  db_mapping_config.py  debug_response_model.py  locustfile.py  mypy_errors.txt  pip_audit_report.json  pyproject.toml  pytest.ini  requirements.txt  seed_e2e.py  seed_sample_data.py  server.py  sql_server_connector.py
backend/api/: STOCK_VERIFY_2-db-maped.code-workspace  admin_control_api.py  admin_dashboard_api.py  auth.py  chat_ws_api.py  count_lines_api.py  dynamic_fields_api.py  dynamic_reports_api.py  enhanced_item_api.py  enrichment_api.py  enterprise_api.py  erp_api.py  error_reporting_api.py  exports_api.py  health.py  item_verification_api.py  legacy_routes.py  locations_api.py  logs_api.py  mapping_api.py  master_settings_api.py  metrics_api.py  notes_api.py  pin_auth_api.py  preferences_api.py  quality_control_api.py  rack_api.py  realtime_dashboard_api.py  report_generation_api.py  reporting_api.py  response_models.py  schemas.py  search_api.py  security_api.py  service_logs_api.py  session_api.py  session_management_api.py  sql_connection_api.py  supervisor_pin.py  sync.py  (+6 more)
backend/auth/: dependencies.py
backend/core/: lifespan.py
backend/db/: indexes.py  migrations.py  runtime.py
backend/middleware/: compression_middleware.py  input_sanitization.py  lan_enforcement.py  performance_middleware.py  request_size_limit.py  security.py  security_headers.py  setup.py
backend/models/: user.py
backend/scripts/: add_performance_indexes.py  add_test_items.py  backfill_new_fields.py  barcode_analyzer.py  batch_condition_manager.py  brute_force_mongo.py  check_databases.py  check_mongodb_items.py  check_sql_server_connection.py  check_users.py  check_warehouses.py  codebase_upgrade_checker.py  create_feature_indexes.py  discover_tables.py  generate_api_docs.py  generate_secrets.py  import_excel_data.py  inspect_db.py  migrate_user_settings.py  quick_import.py  report_generator.py  restore_mongodb_backup.py  set_supervisor_pin.py  setup_server_localhost.py  stress_test_concurrent_users.py  test_db_connection.py  validate_env.py  verify_erp_item_fix.py  verify_search_response_fix.py
backend/services/: activity_log.py  advanced_erp_sync.py  advanced_report_service.py  ai_variance.py  analytics_service.py  auto_diagnosis.py  auto_recovery.py  auto_sync_manager.py  batch_operations.py  cache_service.py  change_detection_sync.py  chat_service.py  circuit_breaker.py  connection_pool.py  data_governance.py  data_validation_service.py  database_health.py  database_manager.py  database_optimizer.py  dynamic_fields_service.py  dynamic_report_service.py  enhanced_connection_pool.py  enrichment_service.py  enterprise_audit.py  enterprise_security.py  erp_sync_service.py  error_log.py  error_notification_service.py  (+16 more)
(+12709 files in other folders)
