[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-verify-backend"
version = "2.1.0"
description = "Backend API for Stock Verify Application"
authors = [{ name = "Stock Verify Team", email = "admin@stockverify.internal" }]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.115.8",
    "uvicorn[standard]>=0.34.1",
    "gunicorn>=23.0.0",
    "motor>=3.7.0",
    "pydantic>=2.12.5",
]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*", "*/__pycache__/*", "*/venv/*", "*/.venv/*"]
