[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-verify-backend"
version = "2.1.0"
description = "Backend API for Stock Verify Application"
authors = [{ name = "Stock Verify Team", email = "admin@stockverify.internal" }]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.115.8",
    "uvicorn[standard]>=0.34.1",
    "gunicorn>=23.0.0",
    "motor>=3.7.0",
    "pydantic>=2.12.5",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=api --cov=services --cov=tests"
testpaths = ["tests"]
asyncio_mode = "auto"
env_files = [".env.test"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
strict_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
explicit_package_bases = true
ignore_missing_imports = true
# Suppress common strictness errors in legacy code
disable_error_code = ["call-arg", "arg-type", "assignment", "return-value", "var-annotated", "dict-item", "index", "unreachable", "union-attr", "operator", "attr-defined"]

[[tool.mypy.overrides]]
module = "motor.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jose.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "passlib.*"
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | venv_test
    | _build
    | buck-out
    | build
    | dist
    | node_modules
    | __pycache__
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
target-version = "py39"
exclude = [
    ".yoyo/",
    "__pycache__/",
    ".pytest_cache/",
    ".mypy_cache/",
    ".ruff_cache/",
    "venv/",
    ".venv/",
    "venv_test/",
    "venv*/",
    ".venv*/",
    "env/",
    ".env/",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "UP045", # allow Optional[X] instead of X | None (for Python 3.9 compat)
    "B904",  # allow raising without from clause (legacy)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011"]
